--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -1,4 +1,5 @@
-{% load static %}<!DOCTYPE html>
+{% load static %}
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -12,6 +13,8 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+
 
 
     <!-- Custom styles for this template -->
@@ -44,7 +47,7 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="{% block ahome %}{% endblock %}"><a href="{% url 'home' %}">Home</a></li>
-                <li class="{% block aordinem %}{% endblock %}"><a href="{% url 'ngo_list' %}">Ordinem</a></li>
+                <li class="{% block aordinem %}{% endblock %}"><a href="{% url 'ngo_list' %}">Ngo</a></li>
                 <li class="{% block ablog %}{% endblock %}"><a href="{% url 'article_list' %}">Blog</a></li>
                 <li class="{% block afeeds %}{% endblock %}"><a href="{% url 'user_feeds' %}">Feeds</a></li>
             </ul>
