--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -1,14 +1,81 @@
 {% extends 'accounts/base.html' %}
 {% block ahome %}active{% endblock %}
 {% block body %}
+<!-- SLIDING IMAGES -->
 <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Welcome To CarpeDiem</h1>
-        <p>A Social Network For A Cause</p>
-      </div>
+    <div class="row" >
+    <div class="container">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="http://placehold.it/1200x400/16a085/ffffff&text=About Us">
+                <div class="carousel-caption">
+                    <h3>
+                        Headline</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem
+                        ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+                </div>
+            </div>
+            <!-- End Item -->
+            <div class="item">
+                <img src="http://placehold.it/1200x400/e67e22/ffffff&text=Projects">
+                <div class="carousel-caption">
+                    <h3>
+                        Headline</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem
+                        ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+                </div>
+            </div>
+            <!-- End Item -->
+            <div class="item">
+                <img src="http://placehold.it/1200x400/2980b9/ffffff&text=Portfolio">
+                <div class="carousel-caption">
+                    <h3>
+                        Headline</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem
+                        ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+                </div>
+            </div>
+            <!-- End Item -->
+            <div class="item">
+                <img src="http://placehold.it/1200x400/8e44ad/ffffff&text=Services">
+                <div class="carousel-caption">
+                    <h3>
+                        Headline</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem
+                        ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+                </div>
+            </div>
+            <!-- End Item -->
+        </div>
+        <!-- End Carousel Inner -->
+        <ul class="nav nav-pills nav-justified">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"><a href="#">About<small>Lorem
+                ipsum dolor sit</small></a></li>
+            <li data-target="#myCarousel" data-slide-to="1"><a href="#">Ngo<small>Lorem ipsum
+                dolor sit</small></a></li>
+            <li data-target="#myCarousel" data-slide-to="2"><a href="#">Feeds<small>Lorem ipsum
+                dolor sit</small></a></li>
+            <li data-target="#myCarousel" data-slide-to="3"><a href="#">
+                <small>Lorem ipsum
+                dolor sit</small></a></li>
+        </ul>
     </div>
+    <!-- End Carousel -->
+</div>
+        </div>
 
+
+<!-- make profile -->
 <div class="container">
 
       <div class="row">
@@ -42,4 +109,48 @@
           {% endif %}
   </div>
 </div>
+
+<!-- photo section -->
+<section class="work-info">
+    <div class="container">
+        <h1 class="text-center">SECTION NAME</h1>
+          <hr>
+        <div class="row">
+
+            <div class=" col-md-6 col-sm-12">
+                <div class="work-item">
+                    <a href="#">
+                    <img src="http://suddenimpactwebdesign.com/wp-content/uploads/2015/01/me.jpg" class="img-responsive">
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-sm-12 ">
+                <div class="work-item">
+                    <a href="#">
+                    <img src="https://www.rkaink.com/wp-content/uploads/2016/04/Custom-Web-Design-for-Amanda-Abella-by-RKA-ink-2-500x333.jpg" class="img-responsive">
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-sm-12 ">
+                <div class="work-item">
+                    <a href="#">
+                    <img src="http://www.karniesolutions.com/img/portfolio/idea-best.jpg" class="img-responsive">
+                    </a>
+                </div>
+            </div>
+
+            <div class=" col-md-6 col-sm-12 col-xs-12">
+                <div class="work-item">
+                    <a href="#">
+                    <img src="https://static1.squarespace.com/static/5056838724acbaa64593ee7b/t/561472dfe4b0f9222d2e8c6b/1444180707338/?format=500w" class="img-responsive">
+                    </a>
+                </div>
+            </div>
+
+        </div><!--end of row-->
+    </div><!--end of container-->
+</section>
+ <!--end of work section-->
 {% endblock %}
