--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -81,7 +81,7 @@
                   </table>
 
                   <a href="#" class="btn btn-primary">Friend List</a>
-                  <a href="#" class="btn btn-primary">NGO List</a>
+                  <a href="{% url 'ngo_list' %}" class="btn btn-primary">NGO List</a>
                 </div>
               </div>
             </div>
