--- a/blog/templates/blog/articlecreate.html
+++ b/blog/templates/blog/articlecreate.html
@@ -1,4 +1,7 @@
 {% extends 'accounts/base.html' %}
+{% block head %}
+    {{ form.media }}
+{% endblock %}
 {% load crispy_forms_tags %}
 {% block body %}
     <div class="container">
