--- a/blog/templates/blog/articledetail.html
+++ b/blog/templates/blog/articledetail.html
@@ -34,7 +34,7 @@
                 <hr>
 
                 <!-- Post Content -->
-                <p class="lead">{{ article.content|linebreaks }}</p>
+                {{ article.get_content_markdown }}
 
                 <hr>
 
