--- a/blog/templates/blog/articledetail.html
+++ b/blog/templates/blog/articledetail.html
@@ -34,8 +34,9 @@
                 <hr>
 
                 <!-- Post Content -->
-                {{ article.get_content_markdown }}
-
+                <div class="post-detail-item">
+                    {{ article.get_content_markdown }}
+                </div>
                 <hr>
 
                 <!-- Blog Comments -->
