--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -100,5 +100,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.6/marked.min.js"></script>
     <script src="{% static 'js/article_create.js' %}"></script>
+    {% block scripts %}
+    {% endblock %}
   </body>
 </html>
