Worked on Postelo app 2nd mid commit

--- a/blog/templates/blog/articlecreate.html
+++ b/blog/templates/blog/articlecreate.html
@@ -28,3 +28,7 @@
     </div>
     </div>
 {% endblock %}
+{% block scripts %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.6/marked.min.js"></script>
+    <script src="{% static 'js/article_create.js' %}"></script>
+{% endblock %}
