--- a/postelo/templates/postelo/mesg_detail.html
+++ b/postelo/templates/postelo/mesg_detail.html
@@ -5,7 +5,7 @@
         <h2>Inbox</h2>
         <hr/>
         <div class="col-md-8 col-md-offset-4">
-            <a href="{% url 'message_inbox' %}" class="btn btn-default"><span class="glyphicon glyphicon-triangle-left"></span></a>
+            <a href="#"  onclick="window.history.back()" class="btn btn-default"><span class="glyphicon glyphicon-triangle-left"></span></a>
         </div>
     </div>
     <div class="row">
