--- a/postelo/templates/postelo/mesg_drafts.html
+++ b/postelo/templates/postelo/mesg_drafts.html
@@ -1,10 +1,19 @@
 {% extends 'accounts/base.html' %}
+{% load static %}
+{% block stylesheet %}
+    <link href="{% static 'css/mailstyle.css' %}" type="text/css" rel="stylesheet">
+{% endblock %}
 {% block body %}
     <div class="container">
     <div class="row">
-        <h2>Inbox</h2>
-        <hr/>
+        <div class="col-md-4">
+            <h2>Inbox</h2>
+        </div>
+        <div class="col-md-8">
+            <button type="button" class="btn btn-default keep-inline"><span class="glyphicon glyphicon-refresh"></span></button>
+        </div>
     </div>
+    <hr/>
     <div class="row">
          <div class="col-md-4">
             <div class="list-group">
@@ -22,14 +31,14 @@
             </div>
         </div>
         <div class="col-md-8">
-            <table class="table">
+            <table class="table table-hover">
                 <tr>
                     <th>Sender</th>
                     <th>Subject</th>
                     <th>Date</th>
                 </tr>
                 {% for mesg in messages %}
-                <tr>
+                <tr class="clickable-row" data-href="{% url 'message_detail' pk=mesg.id %}">
                 <td>{{ mesg.sender.username }}</td>
                 <td>{{ mesg.subject }}</td>
                 <td>{{ mesg.time_stamp }}</td>
@@ -42,4 +51,7 @@
 
 
     </div>
+{% endblock %}
+{% block scripts %}
+    <script src="{% static 'js/tablelink.js' %}" type="text/javascript"></script>
 {% endblock %}
