--- a/ordinem/templates/ordinem/detail2.html
+++ b/ordinem/templates/ordinem/detail2.html
@@ -1,6 +1,7 @@
 {% extends 'accounts/base.html' %}
 {% load static %}
 {% block stylesheet %}
+     <link href="{% static 'css/bodypad.css' %}" rel="stylesheet" type="text/css"/>
     <link href="{% static 'css/poststyle.css' %} }" type="text/css" rel="stylesheet"/>
 {% endblock %}
 {% block body %}
