--- a/ordinem/templates/ordinem/comment.html
+++ b/ordinem/templates/ordinem/comment.html
@@ -1,5 +1,9 @@
 {% extends 'accounts/base.html' %}
 {% load crispy_forms_tags %}
+{% load static %}
+{% block stylesheet %}
+    <link href="{% static 'css/bodypad.css' %}" rel="stylesheet" type="text/css"/>
+{% endblock %}
 {% block body %}
     <div class="container">
     <div class="row">
