--- a/ordinem/templates/ordinem/gallery.html
+++ b/ordinem/templates/ordinem/gallery.html
@@ -1,5 +1,7 @@
 {% extends 'accounts/base.html' %}
+{% load static %}
 {% block stylesheet %}
+    <link href="{% static 'css/bodypad.css' %}" rel="stylesheet" type="text/css"/>
 {% endblock %}
 {% block body %}
     <div class="container">
