--- a/postelo/templates/postelo/mesg_detail.html
+++ b/postelo/templates/postelo/mesg_detail.html
@@ -1,16 +1,20 @@
 {% extends 'accounts/base.html' %}
+{% load static %}
+{% block stylesheet %}
+    <link href="{% static 'css/bodypad.css' %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static 'css/mailstyle.css' %}" type="text/css" rel="stylesheet">
+{% endblock %}
 {% block body %}
     <div class="container">
     <div class="row">
-        <h2>Inbox</h2>
-        <hr/>
-        <div class="col-md-8 col-md-offset-4">
-            <a href="#"  onclick="window.history.back()" class="btn btn-default"><span class="glyphicon glyphicon-triangle-left"></span></a>
+        <div class="col-md-4">
+            <h2>Inbox</h2>
+        </div>
+        <div class="col-md-8">
+            <a href="#"  onclick="window.history.back()" class="btn btn-default keep-inline"><span class="glyphicon glyphicon-triangle-left"></span></a>
         </div>
     </div>
-    <div class="row">
-        <hr/>
-    </div>
+    <hr/>
     <div class="row">
          <div class="col-md-4">
             <div class="list-group">
