--- a/postelo/templates/postelo/mesg_index.html
+++ b/postelo/templates/postelo/mesg_index.html
@@ -1,15 +1,28 @@
 {% extends 'accounts/base.html' %}
+{% load static %}
+{% block stylesheet %}
+    <link href="{% static 'css/bodypad.css' %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static 'css/mailstyle.css' %}" type="text/css" rel="stylesheet">
+{% endblock %}
 {% block body %}
     <div class="container">
-    <div class="row">
-        <h2>Inbox</h2>
-        <hr/>
+   <div class="row">
+        <div class="col-md-4">
+            <h2>Inbox</h2>
+        </div>
+        <div class="col-md-8">
+            <button type="button" class="btn btn-default keep-inline" onclick="window.location.reload(true)"><span class="glyphicon glyphicon-refresh"></span></button>
+        </div>
     </div>
+    <hr/>
     <div class="row">
          <div class="col-md-4">
             <div class="list-group">
               <li class="list-group-item"><a class="btn btn-success btn-block" href="{% url 'message_compose' %}">Compose</a></li>
-              <a href="{% url 'message_inbox' %}" class="list-group-item active">Inbox</a>
+              <a href="{% url 'message_inbox' %}" class="list-group-item active">Inbox
+              <span class="badge">{{ mail_inbox }}</span>
+              <span class="badge">{{ mail_inbox_unread }}</span>
+              </a>
               <a href="{% url 'message_drafts' %}" class="list-group-item">Drafts
               <span class="badge">{{ mail_drafts }}</span>
               </a>
@@ -20,14 +33,14 @@
             </div>
         </div>
         <div class="col-md-8">
-            <table class="table">
+            <table class="table table-hover">
                 <tr>
                     <th>Sender</th>
                     <th>Subject</th>
                     <th>Date</th>
                 </tr>
                 {% for mesg in messages %}
-                <tr>
+                <tr class="clickable-row" data-href="{% url 'message_detail' pk=mesg.id %}">
                 <td>{{ mesg.sender.username }}</td>
                 <td>{{ mesg.subject }}</td>
                 <td>{{ mesg.time_stamp }}</td>
@@ -37,7 +50,9 @@
         </div>
 
     </div>
-
-
     </div>
 {% endblock %}
+{% block scripts %}
+    <script src="{% static 'js/tablelink.js' %}" type="text/javascript"></script>
+{% endblock %}
+
