--- a/postelo/templates/postelo/mesg_sent.html
+++ b/postelo/templates/postelo/mesg_sent.html
@@ -1,16 +1,20 @@
 {% extends 'accounts/base.html' %}
+{% load static %}
+{% block stylesheet %}
+    <link href="{% static 'css/bodypad.css' %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static 'css/mailstyle.css' %}" type="text/css" rel="stylesheet">
+{% endblock %}
 {% block body %}
     <div class="container">
     <div class="row">
-        <h2>Inbox</h2>
-        <hr/>
-        <div class="col-md-8 col-md-offset-4">
-            <a href="{% url 'message_sent' %}" class="btn btn-default"><span class="glyphicon glyphicon-refresh"></span></a>
+        <div class="col-md-4">
+            <h2>Inbox</h2>
+        </div>
+        <div class="col-md-8">
+            <button type="button" class="btn btn-default keep-inline" onclick="window.location.reload(true)"><span class="glyphicon glyphicon-refresh"></span></button>
         </div>
     </div>
-    <div class="row">
-        <hr/>
-    </div>
+    <hr/>
     <div class="row">
          <div class="col-md-4">
             <div class="list-group">
@@ -21,7 +25,7 @@
               <a href="{% url 'message_drafts' %}" class="list-group-item">Drafts
               <span class="badge">{{ mail_drafts }}</span>
               </a>
-              <a href="{% url 'message_sent' %}" class="list-group-item">Sent
+              <a href="{% url 'message_sent' %}" class="list-group-item active">Sent
               <span class="badge">{{ mail_sent }}</span>
               </a>
               <a href="#" class="list-group-item">Trash</a>
@@ -35,7 +39,7 @@
                     <th>Date</th>
                 </tr>
                 {% for mesg in messages %}
-                <tr>
+                <tr class="clickable-row" data-href="{% url 'message_detail' pk=mesg.id %}">
                 <td>{{ mesg.sender.username }}</td>
                 <td>{{ mesg.subject }}</td>
                 <td>{{ mesg.time_stamp }}</td>
@@ -45,7 +49,8 @@
         </div>
 
     </div>
-
-
     </div>
+{% endblock %}
+{% block scripts %}
+    <script src="{% static 'js/tablelink.js' %}" type="text/javascript"></script>
 {% endblock %}
