--- a/postelo/templates/postelo/mesg_detail.html
+++ b/postelo/templates/postelo/mesg_detail.html
@@ -12,6 +12,7 @@
         </div>
         <div class="col-md-8">
             <a href="#"  onclick="window.history.back()" class="btn btn-default keep-inline"><span class="glyphicon glyphicon-triangle-left"></span></a>
+            <a href="#" class="btn btn-default keep-inline pull-right"><span class="glyphicon glyphicon-trash"></span></a>
         </div>
     </div>
     <hr/>
@@ -20,6 +21,7 @@
             <div class="list-group">
               <li class="list-group-item"><a class="btn btn-success btn-block" href="{% url 'message_compose' %}">Compose</a></li>
               <a href="{% url 'message_inbox' %}" class="list-group-item">Inbox
+              <span class="badge">{{ mail_inbox }}</span>
               <span class="badge">{{ mail_inbox_unread }}</span>
               </a>
               <a href="{% url 'message_drafts' %}" class="list-group-item">Drafts
@@ -28,7 +30,9 @@
               <a href="{% url 'message_sent' %}" class="list-group-item">Sent
               <span class="badge">{{ mail_sent }}</span>
               </a>
-              <a href="#" class="list-group-item">Trash</a>
+              <a href="{% url 'message_trash' %}" class="list-group-item">Trash
+              <span class="badge">{{ mail_trash }}</span>
+              </a>
             </div>
         </div>
         <div class="col-md-8">
@@ -41,4 +45,7 @@
 
 
     </div>
+{% endblock %}
+{% block scripts %}
+
 {% endblock %}
