--- a/postelo/templates/postelo/mesg_sent.html
+++ b/postelo/templates/postelo/mesg_sent.html
@@ -20,6 +20,7 @@
             <div class="list-group">
               <li class="list-group-item"><a class="btn btn-success btn-block" href="{% url 'message_compose' %}">Compose</a></li>
               <a href="{% url 'message_inbox' %}" class="list-group-item">Inbox
+              <span class="badge">{{ mail_inbox }}</span>
               <span class="badge">{{ mail_inbox_unread }}</span>
               </a>
               <a href="{% url 'message_drafts' %}" class="list-group-item">Drafts
@@ -28,7 +29,9 @@
               <a href="{% url 'message_sent' %}" class="list-group-item active">Sent
               <span class="badge">{{ mail_sent }}</span>
               </a>
-              <a href="#" class="list-group-item">Trash</a>
+              <a href="{% url 'message_trash' %}" class="list-group-item">Trash
+              <span class="badge">{{ mail_trash }}</span>
+              </a>
             </div>
         </div>
         <div class="col-md-8">
