--- a/postelo/templates/postelo/mesg_trash.html
+++ b/postelo/templates/postelo/mesg_trash.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block body %}
     <div class="container">
-    <div class="row">
+   <div class="row">
         <div class="col-md-4">
             <h2>Inbox</h2>
         </div>
@@ -23,13 +23,13 @@
               <span class="badge">{{ mail_inbox }}</span>
               <span class="badge">{{ mail_inbox_unread }}</span>
               </a>
-              <a href="{% url 'message_drafts' %}" class="list-group-item active">Drafts
+              <a href="{% url 'message_drafts' %}" class="list-group-item">Drafts
               <span class="badge">{{ mail_drafts }}</span>
               </a>
               <a href="{% url 'message_sent' %}" class="list-group-item">Sent
               <span class="badge">{{ mail_sent }}</span>
               </a>
-              <a href="{% url 'message_trash' %}" class="list-group-item">Trash
+              <a href="{% url 'message_trash' %}" class="list-group-item active">Trash
               <span class="badge">{{ mail_trash }}</span>
               </a>
             </div>
@@ -57,3 +57,4 @@
 {% block scripts %}
     <script src="{% static 'js/tablelink.js' %}" type="text/javascript"></script>
 {% endblock %}
+
