Ngo logo size modal extra field add

--- a/blog/templates/blog/articledraft.html
+++ b/blog/templates/blog/articledraft.html
@@ -1,4 +1,4 @@
-d{% extends 'accounts/base.html' %}
+{% extends 'accounts/base.html' %}
 {% load static %}
 {% block stylesheet %}
     <link href="{% static 'css/blog-home.css' %}" rel="stylesheet">
