--- a/ordinem/templates/ordinem/ngo_list.html
+++ b/ordinem/templates/ordinem/ngo_list.html
@@ -13,7 +13,7 @@
 		        <div class="row">
 		            <div class="col-sm-6 col-md-4">
 		                <figure>
-		                    <img src="http://usbcode.ir/wp-content/uploads/2017/03/bootstrap.jpg">
+		                    <img src="{{ ngo.logo_list.url }}">
 		                </figure>
 		            </div>
 		            <div class="col-sm-6 col-md-8">
