--- a/ordinem/templates/ordinem/detail2.html
+++ b/ordinem/templates/ordinem/detail2.html
@@ -2,16 +2,19 @@
 {% load static %}
 {% block stylesheet %}
      <link href="{% static 'css/bodypad.css' %}" rel="stylesheet" type="text/css"/>
-    <link href="{% static 'css/poststyle.css' %} }" type="text/css" rel="stylesheet"/>
+    <link href="{% static 'css/poststyle.css' %}" type="text/css" rel="stylesheet"/>
 {% endblock %}
 {% block body %}
     <div class="container">
 <h2>{{ ngo.name }} <small>{{ ngo.get_round_ratings }}</small></h2>
 <h3>This Organization is Moderated by <a href="{% url 'profile_detail' pk=ngo.moderator.pk %}">@{{ ngo.moderator.username }}</a></h3>
-    <a href="{% url 'follow_ngo' npk=ngo.pk upk=request.user.id %}" type="submit" class="btn btn-primary">follow</a>
+    <a href="{% url 'follow_ngo' npk=ngo.pk upk=request.user.id %}" type="submit" class="btn btn-primary">
+        {% if is_following %}Following{% else %}Follow{% endif %}
+        </a>
     <a href="{% url 'gallery' pk=ngo.pk %}" type="submit" class="btn btn-info">Gallery</a>
-    <a href="{% url 'ngo_like' pk=ngo.pk %}" type="submit" class="btn btn-info"><span class="badge">{{ ngo.likes.count }}</span>
+    <a href="{% url 'ngo_like' pk=ngo.pk %}" type="submit" class="btn btn-info">
         {% if is_liked %}Unlike{% else %}like{% endif %}
+    <span class="badge">{{ ngo.likes.count }}</span>
     </a>
     <a href="{% url 'ngo_rate' pk=ngo.pk %}" type="submit" class="btn btn-warning">Give Ratings</a>
 {% if request.user.id == ngo.moderator.id %}
@@ -35,12 +38,21 @@
                               </div>
                               <div class="media-body">
                                 <a href="#" class="anchor-username"><h4 class="media-heading">{{ ngo.name }}</h4></a>
-                                <a href="#" class="anchor-time">{{ happening.creation_date }}</a>
+                                <a href="#" class="anchor-time">{{ happening.creation_date|timesince }}</a>
                               </div>
                             </div>
                         </div>
                          <div class="col-md-1">
-                             <a href="#"><i class="glyphicon glyphicon-chevron-down"></i></a>
+                             <div class="dropdown">
+                             <a href="#" class="dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><i class="glyphicon glyphicon-chevron-down"></i></a>
+                             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                <li><a href="{% url 'edit_happening' pk=happening.id %}">
+                                    <span class="glyphicon glyphicon glyphicon-edit"></span> Edit Post</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="{% url 'delete_happening' pk=happening.id %}">
+                                    <span class="glyphicon glyphicon glyphicon-trash"></span> Delete Post</a></li>
+                              </ul>
+                             </div>
                          </div>
                     </div>
                </section>
@@ -51,7 +63,8 @@
                    <hr>
                    <div class="post-footer-option container">
                         <ul class="list-unstyled">
-                            <li><a href="#"><i class="glyphicon glyphicon-thumbs-up"></i> Like</a></li>
+                            <li><a href="{% url 'like_happening' pk=happening.id %}"><i class="glyphicon glyphicon-thumbs-up"></i>
+                              {% if request.user in happening.likes.all %}Unlike{% else %}like{% endif %} &#40 {{ happening.likes.count }} &#41</a></li>
                             <li><a href="{% url 'post_comment' pk=happening.pk %}"><i class="glyphicon glyphicon-comment"></i> Comment</a></li>
                             <li><a href="#"><i class="glyphicon glyphicon-share-alt"></i> Share</a></li>
                         </ul>
@@ -60,26 +73,30 @@
                        <div class="comment-form">
 
                        </div>
-                        {% for comment in comments %}
-                        {% if comment.comment_on == happening %}
+
                             <div class="comment">
+                            {% for comment in comments %}
+                            {% if comment.comment_on == happening %}
                             <div class="media">
-                              <div class="media-left">
-                                <a href="#">
-                                  <img class="media-object photo-profile" src="{{ comment.author.user.profile.photo.url }}" width="32" height="32" alt="...">
-                                </a>
-                              </div>
-                              <div class="media-body">
-                                <a href="#" class="anchor-username"><h4 class="media-heading">{{ comment.author.username }}</h4></a>
-                                <a href="#" class="anchor-time">{{ comment.time_stamp }}</a>
-                              </div>
-                                <p>{{ comment.content }}</p>
+                                  <div class="media-left">
+                                    <a href="#">
+                                      <img class="media-object photo-profile" src="{{ comment.author.profile.photo.url }}" width="32" height="32" alt="...">
+                                    </a>
+                                  </div>
+                                  <div class="media-body">
+                                    <a href="#" class="anchor-username"><h4 class="media-heading">{{ comment.author.username }}</h4></a>
+                                    <a href="#" class="anchor-time">{{ comment.time_stamp|timesince }}</a>
+                                  </div>
+                                    <p>{{ comment.content }}</p>
                             </div>
-                       </div>
                             {% endif %}
                             {% endfor %}
-</div>
-               </section>
+                      </div>
+
+
+                  </div>
+
+              </section>
             </div>
         </div>
 	</div>
