Added delete fucn to blog and few links fix

--- a/blog/templates/blog/articlecreate.html
+++ b/blog/templates/blog/articlecreate.html
@@ -3,6 +3,7 @@
 {% block head %}
     {{ form.media }}
     <link type="text/css" rel="stylesheet" href="{% static "css/blog-create.css" %}">
+    <link href="{% static 'css/bodypad.css' %}" rel="stylesheet">
 {% endblock %}
 {% load crispy_forms_tags %}
 {% block body %}
