--- a/accounts/templates/accounts/user_feeds_dummy.html
+++ b/accounts/templates/accounts/user_feeds_dummy.html
@@ -1,9 +1,8 @@
 {% extends 'accounts/base.html' %}
 {% load static %}
-{% load crispy_forms_tags %}
 {% block afeeds %}active{% endblock %}
 {% block stylesheet %}
-
+    <link href="{% static 'css/bodypad.css' %}" rel="stylesheet" type="text/css"/>
     <link href="{% static 'css/poststyle.css' %} }" type="text/css" rel="stylesheet"/>
 {% endblock %}
 {% block body %}
@@ -41,17 +40,14 @@
                </section>
               <section class="post-footer">
                    <hr>
-                   <div class="post-footer-option ">
+                   <div class="post-footer-option container">
                         <ul class="list-unstyled">
                             <li><a href="#"><i class="glyphicon glyphicon-thumbs-up"></i> Like</a></li>
-                            <li><a href="#"><i class="glyphicon glyphicon-share-alt"></i> Share</a>
+                            <li><a href="{% url 'post_comment' pk=happening.pk %}"><i class="glyphicon glyphicon-comment"></i> Comment</a></li>
+                            <li><a href="#"><i class="glyphicon glyphicon-share-alt"></i> Share</a></li>
                         </ul>
-                            <div id="flip"><i class="glyphicon glyphicon-comment"></i> Comment</div>
-                            <div id="panel">hello
-                            </div>
-
-
-                  <!--<div class="post-footer-comment-wrapper">
+                   </div>
+                  <div class="post-footer-comment-wrapper">
                        <div class="comment-form">
 
                        </div>
@@ -73,7 +69,7 @@
                        </div>
                             {% endif %}
                             {% endfor %}
-                    </div> -->
+</div>
                </section>
             </div>
         </div>
@@ -84,8 +80,4 @@
     </ul>
     </div>
     </div>
-{% endblock %}
-
- {% block scripts %}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 {% endblock %}
