--- a/ordinem/templates/ordinem/comment.html
+++ b/ordinem/templates/ordinem/comment.html
@@ -5,7 +5,7 @@
     <link href="{% static 'css/bodypad.css' %}" rel="stylesheet" type="text/css"/>
 {% endblock %}
 {% block body %}
-    <div class="container">
+    <div id="commentbox" class="container">
     <div class="row">
         <div class="col-md-4">
 <h2>Comment</h2>
