--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -31,27 +30,27 @@
   </head>
 
   <body>
+    {% if user.is_authenticated %}
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">CarpeDiem</a>
+            </div>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="{% url 'home' %}">CarpeDiem</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li class="{% block ahome %}{% endblock %}"><a href="{% url 'home' %}">Home</a></li>
-                <li class="{% block aordinem %}{% endblock %}"><a href="{% url 'ngo_list' %}">Ngo</a></li>
-                <li class="{% block ablog %}{% endblock %}"><a href="{% url 'article_list' %}">Blog</a></li>
-                <li class="{% block afeeds %}{% endblock %}"><a href="{% url 'user_feeds' %}">Feeds</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                {% if user.is_authenticated %}
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-left">
+                    <li class="{% block ahome %}{% endblock %}"><a href="{% url 'home' %}">Home</a></li>
+                    <li class="{% block aordinem %}{% endblock %}"><a href="{% url 'ngo_list' %}">Ngo</a></li>
+                    <li class="{% block ablog %}{% endblock %}"><a href="{% url 'article_list' %}">Blog</a></li>
+                    <li class="{% block afeeds %}{% endblock %}"><a href="{% url 'user_feeds' %}">Feeds</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+
                     <li><a href="{% url 'message_inbox' %}">
                     <span class="glyphicon glyphicon-envelope"></span>
                         Inbox
@@ -69,17 +68,49 @@
                     <li><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Logout</a></li>
                 </ul>
                 </li>
-                {% else %}
+                </ul>
+     {% else %}
+                    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">CarpeDiem</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-left">
+                    <li>
+                        <a href="#about">Home</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#services">Ngo</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#portfolio">Blog</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">About Us</a>
+                    </li>
+                </ul>
+                   <ul class="nav navbar-nav navbar-right">
                    <li>
                         <a href="{% url 'login' %}">
                         <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>&nbsp; Login
                     </a>
                    </li>
-                {% endif %}
+                    </ul>
+            </div>
+      {% endif %}
 
-            </ul>
-        </div><!--/.navbar-collapse -->
-      </div>
+
+            <!-- /.navbar-collapse -->
+
+        </div>
+        <!-- /.container-fluid -->
     </nav>
     {% block body %}
     {% endblock %}
@@ -103,5 +134,8 @@
 
     {% block scripts %}
     {% endblock %}
+                </div>
+            </div>
+        </nav>
   </body>
 </html>
