--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -1,168 +1,251 @@
-{% extends 'accounts/base.html' %}
+{% extends "accounts/base.html" %}
 {% load static %}
-{% block stylesheet %}
+<!DOCTYPE html>
+<html lang="en">
+{% block head %}
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Creative - Start Bootstrap Theme</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="{% static 'vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+
+    <!-- Plugin CSS -->
+    <link href="{% static 'vendor/magnific-popup/magnific-popup.css' %}" rel="stylesheet">
+
+    <!-- Theme CSS -->
+    <link href="{% static 'css/creative.min.css' %}" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
 {% endblock %}
-{% block ahome %}active{% endblock %}
 {% block body %}
-<!-- SLIDING IMAGES -->
-<!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="row" >
-    <div class="container">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Wrapper for slides -->
-        {% if user.is_authenticated %}
-        <div class="carousel-inner">
-            <div class="item active">
-                <img src="http://placehold.it/1200x400/16a085/ffffff&text=Hi {{ user.username }}">
-                <div class="carousel-caption">
-                    <p>
-                       <p>Start by checking Your Profile</p>
-                        <p><a class="btn btn-default" href="{% url 'profile' %}" role="button">View Profile &raquo;</a></p>
-                    </p>
-                </div>
+<body id="page-top">
+
+    <header>
+        <div class="header-content">
+            <div class="header-content-inner">
+                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+                <hr>
+                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
-            <!-- End Item -->
-            <div class="item">
-                <img src="http://placehold.it/1200x400/e67e22/ffffff&text=Discover Ngos">
-                <div class="carousel-caption">
-                    <p>
-                        <p>View the best Ngos</p>
-                        <p><a class="btn btn-default" href="{% url 'ngo_list' %}" role="button">Organizations &raquo;</a></p>
-                    </p>
-                </div>
-            </div>
-            <!-- End Item -->
-            <div class="item">
-                <img src="http://placehold.it/1200x400/2980b9/ffffff&text=Check Feeds">
-                <div class="carousel-caption">
-                    <p>
-                        <p>A Glance at All Happenings</p>
-                        <p><a class="btn btn-default" href="{% url 'user_feeds' %}" role="button">Feeds &raquo;</a></p>
-                    </p>
-                </div>
-            </div>
-            <!-- End Item -->
-            <div class="item">
-                <img src="http://placehold.it/1200x400/8e44ad/ffffff&text=About Us">
-                <div class="carousel-caption">
-                    <p>
-                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem
-                        ipsum dolor sit amet, consetetur sadipscing elitr.</p>
-                </div>
-            </div>
-            <!-- End Item -->
         </div>
-        <!-- End Carousel Inner -->
-        <ul class="nav nav-pills nav-justified">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"><a href="#">Your profile</a></li>
-            <li data-target="#myCarousel" data-slide-to="1"><a href="#">Ngos</a></li>
-            <li data-target="#myCarousel" data-slide-to="2"><a href="#">Feeds</a></li>
-            <li data-target="#myCarousel" data-slide-to="3"><a href="#">About us</a></li>
-        </ul>
-        <!-- if not AUTHENTICATED USER -->
-        {% else %}
-        <div class="carousel-inner">
-            <div class="item active">
-                <img src="http://placehold.it/1200x400/16a085/ffffff&text=Please Login">
-                <div class="carousel-caption">
-                    <p>
-                        <p>You Can't Proceed Without it..</p>
-                        <p><a class="btn btn-default" href="{% url 'login' %}" role="button">Login &raquo;</a></p>
-                    </p>
-                </div>
-            </div>
-            <!-- End Item -->
-            <div class="item">
-                <img src="http://placehold.it/1200x400/2980b9/ffffff&text=Create Account">
-                <div class="carousel-caption">
-                    <p>
-                        <p>You'll Need one in order to surf </p>
-                        <p><a class="btn btn-default" href="{% url 'signup' %}" role="button">Signup &raquo;</a></p>
-                    </p>
-                </div>
-            </div>
-            <!-- End Item -->
-            <div class="item">
-                <img src="http://placehold.it/1200x400/e67e22/ffffff&text=Discover Ngos">
-                <div class="carousel-caption">
-                    <p>
-                        <p>View the best Ngos</p>
-                        <p><a class="btn btn-default" href="{% url 'ngo_list' %}" role="button">Organizations &raquo;</a></p>
-                    </p>
-                </div>
-            </div>
-            <!-- End Item -->
-            <div class="item">
-                <img src="http://placehold.it/1200x400/8e44ad/ffffff&text=About Us">
-                <div class="carousel-caption">
-                    <p>
-                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem
-                        ipsum dolor sit amet, consetetur sadipscing elitr.</p>
-                </div>
-            </div>
+    </header>
 
-            <!-- End Item -->
+    <section class="bg-primary" id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">We've got what you need!</h2>
+                    <hr class="light">
+                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                </div>
+            </div>
         </div>
-        <!-- End Carousel Inner -->
-        <ul class="nav nav-pills nav-justified">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"><a href="#">Your profile</a></li>
-            <li data-target="#myCarousel" data-slide-to="1"><a href="#">Ngos</a></li>
-            <li data-target="#myCarousel" data-slide-to="2"><a href="#">Feeds</a></li>
-            <li data-target="#myCarousel" data-slide-to="3"><a href="#">About us</a></li>
-        </ul>
-        {% endif %}
-    </div>
-    <!-- End Carousel -->
-</div>
+    </section>
+
+    <section id="services">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">At Your Service</h2>
+                    <hr class="primary">
+                </div>
+            </div>
         </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                        <h3>Sturdy Templates</h3>
+                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
+                        <h3>Ready to Ship</h3>
+                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
+                        <h3>Up to Date</h3>
+                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
+                        <h3>Made with Love</h3>
+                        <p class="text-muted">You have to make your websites with love these days!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-
-<!-- make profile -->
-
-
-<!-- photo section -->
-<section class="work-info">
-    <div class="container">
-        <h1 class="text-center">OUR AIM</h1>
-          <hr>
-        <div class="row">
-
-            <div class=" col-md-6 col-sm-12">
-                <div class="work-item">
-                    <a href="#">
-                    <img src="http://suddenimpactwebdesign.com/wp-content/uploads/2015/01/me.jpg" class="img-responsive">
+    <section class="no-padding" id="portfolio">
+        <div class="container-fluid">
+            <div class="row no-gutter popup-gallery">
+                <div class="col-lg-4 col-sm-6">
+                    <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Category
+                                </div>
+                                <div class="project-name">
+                                    Project Name
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="img/portfolio/fullsize/2.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Category
+                                </div>
+                                <div class="project-name">
+                                    Project Name
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="img/portfolio/fullsize/3.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Category
+                                </div>
+                                <div class="project-name">
+                                    Project Name
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Category
+                                </div>
+                                <div class="project-name">
+                                    Project Name
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Category
+                                </div>
+                                <div class="project-name">
+                                    Project Name
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Category
+                                </div>
+                                <div class="project-name">
+                                    Project Name
+                                </div>
+                            </div>
+                        </div>
                     </a>
                 </div>
             </div>
+        </div>
+    </section>
 
-            <div class="col-md-6 col-sm-12 ">
-                <div class="work-item">
-                    <a href="#">
-                    <img src="https://www.rkaink.com/wp-content/uploads/2016/04/Custom-Web-Design-for-Amanda-Abella-by-RKA-ink-2-500x333.jpg" class="img-responsive">
-                    </a>
+    <aside class="bg-dark">
+        <div class="container text-center">
+            <div class="call-to-action">
+                <h2>Free Download at Start Bootstrap!</h2>
+                <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a>
+            </div>
+        </div>
+    </aside>
+
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Let's Get In Touch!</h2>
+                    <hr class="primary">
+                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                </div>
+                <div class="col-lg-4 col-lg-offset-2 text-center">
+                    <i class="fa fa-phone fa-3x sr-contact"></i>
+                    <p>123-456-6789</p>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
+                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
                 </div>
             </div>
+        </div>
+    </section>
 
-            <div class="col-md-6 col-sm-12 ">
-                <div class="work-item">
-                    <a href="#">
-                    <img src="http://www.karniesolutions.com/img/portfolio/idea-best.jpg" class="img-responsive">
-                    </a>
-                </div>
-            </div>
+    <!-- jQuery -->
+    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
 
-            <div class=" col-md-6 col-sm-12 col-xs-12">
-                <div class="work-item">
-                    <a href="#">
-                    <img src="https://static1.squarespace.com/static/5056838724acbaa64593ee7b/t/561472dfe4b0f9222d2e8c6b/1444180707338/?format=500w" class="img-responsive">
-                    </a>
-                </div>
-            </div>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
 
-        </div><!--end of row-->
-    </div><!--end of container-->
-</section>
- <!--end of work section-->
+    <!-- Plugin JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="{% static 'vendor/scrollreveal/scrollreveal.min.js' %}"></script>
+    <script src="{% static 'vendor/magnific-popup/jquery.magnific-popup.min.js' %}"></script>
+
+    <!-- Theme JavaScript -->
+    <script src="{% static 'js/creative.min.js' %}"></script>
+
+</body>
 {% endblock %}
+</html>
