--- a/accounts/templates/accounts/user_feeds.html
+++ b/accounts/templates/accounts/user_feeds.html
@@ -74,6 +74,7 @@
                             {% endif %}
                             {% endfor %}
                     </div> -->
+                       </div>
                </section>
             </div>
         </div>
